fix: spacing with startDate

--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -27,9 +27,11 @@
 .startDate {
     margin: 0;
     font-size: 1.1rem !important;
-    padding-left: .27rem;
+    padding-left: .3rem;
+    font-weight: 800;
 }
 
 .leftContainer {
-    margin-left: 1rem;
+    margin-left: 1.5rem;
+    margin-top: 1rem;
 }
